[gd_scene load_steps=11 format=2]

[ext_resource path="res://world.gd" type="Script" id=1]
[ext_resource path="res://space_background.png" type="Texture" id=2]
[ext_resource path="res://asteroid.png" type="Texture" id=3]
[ext_resource path="res://gun_node.gd" type="Script" id=4]
[ext_resource path="res://gun.png" type="Texture" id=5]
[ext_resource path="res://gun.gd" type="Script" id=6]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1755.9, 10 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 7 )

[node name="world" type="Node2D"]
position = Vector2( 3828.9, 1517.97 )
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
z_index = -2
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1.58661, 3.1734 )
scale = Vector2( 2, 2 )
current = true
zoom = Vector2( 1.85, 1.75 )

[node name="asteroid" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="gun_node" type="Node2D" parent="."]
position = Vector2( 0.0897522, 0.0897446 )
script = ExtResource( 4 )

[node name="gun" type="Sprite" parent="gun_node"]
position = Vector2( 44.012, 34.5675 )
texture = ExtResource( 5 )
offset = Vector2( -2, -35 )
script = ExtResource( 6 )

[node name="muzzle" type="Position2D" parent="gun_node"]
position = Vector2( 98.6362, -0.392886 )

[node name="boundary_top" type="KinematicBody2D" parent="." groups=[
"boundaries",
]]
position = Vector2( -1.04236, -556.693 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="boundary_top"]
position = Vector2( -60.4373, -528.825 )
shape = SubResource( 1 )

[node name="boundary_bottom" type="KinematicBody2D" parent="." groups=[
"boundaries",
]]
position = Vector2( -6.9353, 567.41 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="boundary_bottom"]
position = Vector2( 0, 986.421 )
shape = SubResource( 1 )

[node name="boundary_right" type="KinematicBody2D" parent="." groups=[
"boundaries",
]]
position = Vector2( 1029.56, -2.29416 )
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="boundary_right"]
position = Vector2( 615.168, -628.111 )
shape = SubResource( 1 )

[node name="boundary_left" type="KinematicBody2D" parent="." groups=[
"boundaries",
]]
position = Vector2( -995.254, -57.9396 )
rotation = -1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="boundary_left"]
position = Vector2( -688.892, -776.178 )
shape = SubResource( 1 )

[node name="Position2D_top_1" type="Position2D" parent="."]
position = Vector2( -1724.38, -1037.88 )

[node name="Position2D_top_2" type="Position2D" parent="."]
position = Vector2( 1597.49, -592.146 )

[node name="Position2D_right_1" type="Position2D" parent="."]
position = Vector2( 1011.85, -1021.61 )

[node name="Position2D_right_2" type="Position2D" parent="."]
position = Vector2( 1601.03, 1153.91 )

[node name="Position2D_bottom_1" type="Position2D" parent="."]
position = Vector2( -1690.3, 629.962 )

[node name="Position2D_bottom_2" type="Position2D" parent="."]
position = Vector2( 1601.1, 1174.32 )

[node name="Position2D_left_1" type="Position2D" parent="."]
position = Vector2( -1726.35, -992.305 )

[node name="Position2D_left_2" type="Position2D" parent="."]
position = Vector2( -1066.63, 1405.05 )

[node name="energyLabel" type="Label" parent="."]
margin_left = -928.614
margin_top = -493.233
margin_right = -739.614
margin_bottom = -413.233
custom_fonts/font = SubResource( 2 )
text = "ENERGY:"

[node name="energy" type="Label" parent="."]
margin_left = -756.266
margin_top = -491.057
margin_right = -230.266
margin_bottom = -411.057
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="timeLabel" type="Label" parent="."]
margin_left = -930.234
margin_top = -435.97
margin_right = -827.234
margin_bottom = -387.97
custom_fonts/font = SubResource( 3 )
text = "TIME:"

[node name="time" type="Label" parent="."]
margin_left = -814.927
margin_top = -435.565
margin_right = -306.927
margin_bottom = -336.565
custom_fonts/font = SubResource( 3 )
text = "0
"
